[python-node-semver] Use latest tag

--- a/archlinuxcn/python-node-semver/lilac.yaml
+++ b/archlinuxcn/python-node-semver/lilac.yaml
@@ -11,5 +11,5 @@ post_build: git_pkgbuild_commit
 update_on:
   - source: github
     github: podhmo/python-semver
-    use_max_tag: true
+    use_latest_tag: true
   - alias: python
