--- a/archlinuxcn/ungoogled-chromium/lilac.yaml
+++ b/archlinuxcn/ungoogled-chromium/lilac.yaml
@@ -8,6 +8,8 @@ update_on:
   - source: aur
     aur: ungoogled-chromium
   - alias: icu
+  - source: manual
+    manual: 1.0
 
 maintainers:
   - github: dctxmei
