python-torchvision: update deps and close #2762

--- a/archlinuxcn/python-torchvision/PKGBUILD
+++ b/archlinuxcn/python-torchvision/PKGBUILD
@@ -23,9 +23,9 @@ license=('BSD')
 depends=(
   python-numpy
   python-pillow
+  python-requests
   python-scipy
-  python-six
-  python-tqdm
+  python-typing_extensions
 )
 optdepends=(
   'ffmpeg4.4: video reader backend (the recommended one with better performance)'
