--- a/archlinuxcn/uptime-kuma/lilac.yaml
+++ b/archlinuxcn/uptime-kuma/lilac.yaml
@@ -2,9 +2,13 @@ maintainers:
   - github: CoelacanthusHex
     email: CoelacanthusHex@gmail.com
 
-post_build: git_pkgbuild_commit
+pre_build_script: |
+    update_pkgver_and_pkgrel(_G.newver)
+
+post_build_script: |
+    git_pkgbuild_commit()
 
 update_on:
-- source: github
-  github: louislam/uptime-kuma
-  use_latest_release: true
+  - source: github
+    github: louislam/uptime-kuma
+    use_latest_release: true
