[vlc-git] Fix repo

--- a/archlinuxcn/vlc-git/PKGBUILD
+++ b/archlinuxcn/vlc-git/PKGBUILD
@@ -101,7 +101,7 @@ _name=vlc
 conflicts=("${_name}" 'vlc-dev' 'vlc-plugin' 'vlc-stable-git')
 provides=("${_name}=${pkgver}")
 options=(debug !emptydirs)
-source=('git+https://github.com/videolan/vlc.git'
+source=('git+https://code.videolan.org/videolan/vlc.git'
         'lua53_compat.patch'
         'vlc-live-media-2021.patch'
         'update-vlc-plugin-cache.hook'
