wlroots-lily-git: fix optdepends

--- a/archlinuxcn/wlroots-lily-git/PKGBUILD
+++ b/archlinuxcn/wlroots-lily-git/PKGBUILD
@@ -25,7 +25,7 @@ depends=(
 	seatd
 	vulkan-icd-loader
 	xorg-xwayland)
-optdepends=(xorg-xwayland-lily: HiDPI support, see https://gitlab.freedesktop.org/xorg/xserver/-/merge_requests/733)
+optdepends=('xorg-xwayland-lily: HiDPI support, see https://gitlab.freedesktop.org/xorg/xserver/-/merge_requests/733')
 makedepends=(
 	git
 	meson
