--- a/archlinuxcn/python-huggingface-hub/PKGBUILD
+++ b/archlinuxcn/python-huggingface-hub/PKGBUILD
@@ -4,6 +4,7 @@ _pkgname=huggingface_hub
 pkgname=python-huggingface-hub
 pkgver=0.6.0.rc0
 pkgrel=1
+epoch=1
 pkgdesc='All the open source things related to the Hugging Face Hub'
 arch=('any')
 url='https://github.com/huggingface/huggingface_hub'
