add deepin-git packages
- deepin-qt-dbus-factory-git
- dtkcommon-git
- dtkcore-git
- dtkgui-git
- dtkwidget-git

--- a/archlinuxcn/dtkcommon-git/lilac.yaml
+++ b/archlinuxcn/dtkcommon-git/lilac.yaml
@@ -8,6 +8,6 @@ build_prefix : 'extra-x86_64'
 post_build: aur_post_build
 update_on:
   - source: github
-    github: linuxdeepin/deepin-desktop-base
+    github: linuxdeepin/dtkcommon
   - source: aur
-    aur: deepin-desktop-base-git
+    aur: dtkcommon-git
