--- a/archlinuxcn/deepin-desktop-base-git/PKGBUILD
+++ b/archlinuxcn/deepin-desktop-base-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
 
 pkgname=deepin-desktop-base-git
-pkgver=2022.03.07.r1.gc574dc7
+pkgver=2021.1.25.r0.g2388ac2
 pkgrel=1
 pkgdesc='Base component for Deepin'
 arch=('any')
