--- a/archlinuxcn/deepin-qt-dbus-factory-git/lilac.yaml
+++ b/archlinuxcn/deepin-qt-dbus-factory-git/lilac.yaml
@@ -6,8 +6,12 @@ maintainers:
 pre_build_script: aur_pre_build(maintainers='justforlxz')
 build_prefix : 'extra-x86_64'
 post_build: aur_post_build
+repo_depends:
+  - dtkcommon-git
+  - dtkcore-git
+  - deepin-desktop-base-git
 update_on:
   - source: github
-    github: linuxdeepin/deepin-desktop-base
+    github: linuxdeepin/dde-qt-dbus-factory
   - source: aur
-    aur: deepin-desktop-base-git
+    aur: deepin-qt-dbus-factory-git
