feishu-bin: Fix pre_build_script

--- a/archlinuxcn/feishu-bin/lilac.yaml
+++ b/archlinuxcn/feishu-bin/lilac.yaml
@@ -8,5 +8,5 @@ update_on:
   - source: aur
     aur: feishu-bin
 
-pre_build: aur_pre_build
+pre_build_script: aur_pre_build(maintainers=['AstroProfundis'])
 post_build: aur_post_build
