logseq-desktop: replace makedepedns nodejs with nodejs-lts-gallium util aur update

--- a/archlinuxcn/logseq-desktop/lilac.yaml
+++ b/archlinuxcn/logseq-desktop/lilac.yaml
@@ -4,8 +4,8 @@ maintainers:
 
 build_prefix: extra-x86_64
 
-post_build: aur_post_build
+#update_on:
+  #- source: aur
+  # github: logseq-desktop
 
-update_on:
-  - source: aur
-    github: logseq-desktop
+managed: false
