--- a/archlinuxcn/logseq-desktop/PKGBUILD
+++ b/archlinuxcn/logseq-desktop/PKGBUILD
@@ -7,7 +7,7 @@ pkgdesc="A privacy-first, open-source platform for knowledge sharing and managem
 arch=("x86_64")
 url="https://github.com/logseq/logseq"
 license=('AGPL3')
-makedepends=("git" "yarn" "npm" "clojure" "nodejs")
+makedepends=("git" "yarn" "npm" "clojure" "nodejs-lts-gallium")
 provides=("logseq-desktop")
 conflicts=("logseq-desktop-git" "logseq-desktop-bin")
 source=("${pkgname}-${pkgver}.zip::https://github.com/logseq/logseq/archive/refs/tags/${pkgver}.zip"
