--- a/archlinuxcn/logseq-desktop/lilac.yaml
+++ b/archlinuxcn/logseq-desktop/lilac.yaml
@@ -4,8 +4,7 @@ maintainers:
 
 build_prefix: extra-x86_64
 
-#update_on:
-  #- source: aur
-  # github: logseq-desktop
+update_on:
+  - source: aur
+    aur: logseq-desktop
 
-managed: false
