--- a/archlinuxcn/feishu-bin/lilac.yaml
+++ b/archlinuxcn/feishu-bin/lilac.yaml
@@ -7,6 +7,8 @@ build_prefix: extra-x86_64
 update_on:
   - source: aur
     aur: feishu-bin
+  - source: manual
+    manual: 1
 
 pre_build_script: aur_pre_build(maintainers=['AstroProfundis'])
 post_build: aur_post_build
