--- a/archlinuxcn/latte-dock-git/PKGBUILD
+++ b/archlinuxcn/latte-dock-git/PKGBUILD
@@ -3,14 +3,14 @@
 
 pkgname=latte-dock-git
 _gitname=latte-dock
-pkgver=0.10.8.r5885.4401fdbb
+pkgver=0.10.8.r5895.7cda1c66
 pkgrel=1
 pkgdesc='Latte is a dock based on plasma frameworks that provides an elegant and intuitive experience for your tasks and plasmoids'
 arch=('i686' 'x86_64')
 url='https://invent.kde.org/plasma/latte-dock'
 license=('GPL')
 depends=('plasma-framework>=5.38.0' 'knewstuff' 'hicolor-icon-theme' )
-makedepends=('git' 'cmake' 'extra-cmake-modules' 'appstream')
+makedepends=('git' 'cmake' 'extra-cmake-modules' 'appstream' 'plasma-wayland-protocols')
 optdepends=('libunity: quicklists, counters, and progress bars for apps using libunity')
 conflicts=('latte-dock')
 provides=('latte-dock')
