--- a/archlinuxcn/deadbeef-git/PKGBUILD
+++ b/archlinuxcn/deadbeef-git/PKGBUILD
@@ -13,7 +13,7 @@ license=('GPL2'
 depends=('alsa-lib' 'hicolor-icon-theme' 'jansson' 'libblocksruntime' 'libdispatch')
 makedepends=('curl' 'faad2' 'flac' 'git' 'intltool' 'imlib2' 'libcddb' 'libcdio' 'libmad' 'libpulse' 
              'libsamplerate' 'libvorbis' 'libx11' 'libzip' 'wavpack' 'yasm'
-             'ffmpeg' 'gtk2' 'gtk3' 'clang' 'opusfile' 'mpg123')
+             'ffmpeg4.4' 'gtk2' 'gtk3' 'clang' 'opusfile' 'mpg123')
 optdepends=('gtk2: for the GTK2 interface'
             'gtk3: for the GTK3 interface'
             'libsamplerate: for dsp_libsrc plugin (resampler)'
@@ -40,7 +40,7 @@ optdepends=('gtk2: for the GTK2 interface'
             'libsidplay: for SID player plugin'
             'yasm: required to build assembly portions of ffap plugin'
             'libzip: for vfs_zip plugin'
-            'ffmpeg: for ffmpeg plugin'
+            'ffmpeg4.4: for ffmpeg plugin'
             'opusfile: for opus plugin'
             'mpg123: for MP1/MP2/MP3 playback')
 options=('!libtool')
@@ -48,6 +48,8 @@ conflicts=('deadbeef')
 provides=('deadbeef')
 source=('git+https://github.com/DeaDBeeF-Player/deadbeef.git')
 md5sums=('SKIP')
+
+export PKG_CONFIG_PATH='/usr/lib/ffmpeg4.4/pkgconfig'
 
 prepare() {
   cd "$srcdir/deadbeef"
