[eternalterminal] link to protobuf-lite

--- a/archlinuxcn/eternalterminal/PKGBUILD
+++ b/archlinuxcn/eternalterminal/PKGBUILD
@@ -10,7 +10,7 @@ pkgver=6.2.1
 pkgrel=1
 arch=('i686' 'x86_64' 'armv7h' 'aarch64')
 depends=(
-  'libsodium' 'libutempter' 'libunwind' 'libprotobuf.so'
+  'libsodium' 'libutempter' 'libunwind' 'libprotobuf-lite.so'
 )
 makedepends=(
   'patch' 'cmake' 'unzip' 'wget'
