[rr-git] use the apple-m1 branch on aarch64 for now

--- a/archlinuxcn/rr-git/PKGBUILD
+++ b/archlinuxcn/rr-git/PKGBUILD
@@ -10,7 +10,11 @@ url='http://rr-project.org/'
 license=('custom')
 depends=(python python-pexpect gdb libcapnp.so libkj.so)
 makedepends=(git cmake capnproto)
-source=('git+https://github.com/mozilla/rr')
+if [[ $CARCH = aarch64 ]]; then
+  source=('git+https://github.com/yuyichao/rr#branch=apple-m1')
+else
+  source=('git+https://github.com/mozilla/rr')
+fi
 sha1sums=('SKIP')
 provides=('rr')
 conflicts=('rr')
