--- a/archlinuxcn/3dslicer-git/lilac.yaml
+++ b/archlinuxcn/3dslicer-git/lilac.yaml
@@ -9,6 +9,8 @@ update_on:
   - source: github
     github: Slicer/Slicer
     lilac_throttle: 15d
+  - source: manual
+    manual: 1
 managed: true
 # vim:set ts=2 sw=2 et:
 
