--- a/archlinuxcn/lerc/lilac.yaml
+++ b/archlinuxcn/lerc/lilac.yaml
@@ -3,7 +3,7 @@ maintainers:
 
 build_prefix: extra-x86_64
 
-pre_build: pre_build_script: update_pkgver_and_pkgrel(_G.newver.lstrip('v'))
+pre_build_script: update_pkgver_and_pkgrel(_G.newver.lstrip('v'))
 post_build: git_pkgbuild_commit
 
 update_on:
