[rr-git] switch back to upstream repo

--- a/archlinuxcn/rr-git/PKGBUILD
+++ b/archlinuxcn/rr-git/PKGBUILD
@@ -2,7 +2,7 @@
 # Previous maintainer: Joel Teichroeb <joel@teichroeb.net>
 
 pkgname=rr-git
-pkgver=5.5.0.r277.g46975ce9
+pkgver=5.5.0.r292.g6578f2da
 pkgrel=1
 pkgdesc='a nondeterministic debugger'
 arch=(i686 x86_64 aarch64)
@@ -10,11 +10,7 @@ url='http://rr-project.org/'
 license=('custom')
 depends=(python python-pexpect gdb libcapnp.so libkj.so)
 makedepends=(git cmake capnproto)
-if [[ $CARCH = aarch64 ]]; then
-  source=('git+https://github.com/yuyichao/rr#branch=apple-m1')
-else
-  source=('git+https://github.com/mozilla/rr')
-fi
+source=('git+https://github.com/mozilla/rr')
 sha1sums=('SKIP')
 provides=('rr')
 conflicts=('rr')
